# CSV_co

./: .gitignore  CMakeLists.txt  CMakeLists.txt.soci.obligate.dependency1.in  Dockerfile  README.md
benchmark/: CMakeLists.txt  castbench.cpp  rowsbench.cpp  spanbench.cpp  validatebench.cpp
example/: CMakeLists.txt  csv_2_Ram.cpp  csv_2_matrix.cpp  csv_sum.cpp  csv_sum_if.cpp  smallpop.csv
include/csv_co/: reader.hpp
test/: CMakeLists.txt  common_args.h  csvclean_bad_skip_lines_test.cpp  csvclean_changes_character_encoding_test.cpp  csvclean_dry_run_test.cpp  csvclean_mac_newlines_test.cpp  csvclean_no_header_row_test.cpp  csvclean_optional_quote_characters_test.cpp  csvclean_removes_bom_test.cpp  csvcut_test.cpp  csvgrep_test.cpp  csvjoin_test.cpp  csvjson_test.cpp  csvkit_core_test.cpp  csvlook_test.cpp  csvsort_test.cpp  csvstack_test.cpp  csvstat_test.cpp  test.cpp  test_runner_macros.h
test/examples/: game.csv  utf8.csv
utils/csvkit/: CMakeLists.txt  csvclean.cpp  csvcut.cpp  csvgrep.cpp  csvjoin.cpp  csvjson.cpp  csvlook.cpp  csvsort.cpp  csvsql.cpp  csvstack.cpp  csvstat.cpp  in2csv.cpp  run_csvsql  run_sql2csv  sql2csv.cpp
utils/csvkit/include/: UtfConv.c  argparse.hpp  cli-compare.h  cli.h  dbms-backend-id.h  encoding.h  local-sqlite3-dep.h  local_sqlite3_dep.h  reader-bridge-impl.hpp  rowset-query-impl.h  soci_backend_dep.h
utils/csvkit/include/in2csv/: in2csv_csv.h  in2csv_dbf.h  in2csv_fixed.h  in2csv_geojson.h  in2csv_xls.h  in2csv_xlsx.h
utils/csvkit/src/: csvsql_ocilib.cpp  csvsql_soci.cpp
utils/csvkit/src/in2csv/: common_excel.h  common_functions.h  common_xls.h  header_printer.h  in2csv_csv.cpp  in2csv_dbf.cpp  in2csv_fixed.cpp  in2csv_geojson.cpp  in2csv_json.cpp  in2csv_ndjson.cpp  in2csv_xls.cpp  in2csv_xlsx.cpp
utils/csvkit/test/: CMakeLists.txt  UtfConv.c  cin_subst.h  common_args.h  csvclean_bad_skip_lines_test.cpp  csvclean_changes_character_encoding_test.cpp  csvclean_dry_run_test.cpp  csvclean_mac_newlines_test.cpp  csvclean_no_header_row_test.cpp  csvclean_optional_quote_characters_test.cpp  csvclean_removes_bom_test.cpp  csvclean_test_funcs.h  csvcut_test.cpp  csvgrep_test.cpp  csvjoin_test.cpp  csvjson_test.cpp  csvkit_core_test.cpp  csvlook_test.cpp  csvsort_test.cpp  csvsql_test.cpp  csvstack_test.cpp  csvstat_test.cpp  in2csv_test.cpp  in2csv_test_date.cpp  sql2csv_test.cpp  stdin_subst.h  test_max_field_size_macros.h  test_reader_macros.h  test_runner_macros.h
utils/csvkit/test/examples/: test_geojson.csv  test_query.sql  testdbf_converted.csv  testfixed_schema.csv
